--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "rootDir": ".",
-        "noEmit": true
+        "noEmit": false
     },
     "include": [
         "src/**/*.ts",
